--- a/CAPSLOCKLOAN/web/WEB-INF/web.xml
+++ b/CAPSLOCKLOAN/web/WEB-INF/web.xml
@@ -44,6 +44,10 @@
         <servlet-name>SaveCredit</servlet-name>
         <servlet-class>com.Controller.SaveCredit</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>RedeemCredit</servlet-name>
+        <servlet-class>com.Controller.RedeemCredit</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Login</servlet-name>
         <url-pattern>/Login/*</url-pattern>
@@ -87,6 +91,10 @@
     <servlet-mapping>
         <servlet-name>SaveCredit</servlet-name>
         <url-pattern>/SaveCredit</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>RedeemCredit</servlet-name>
+        <url-pattern>/RedeemCredit</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
